--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,12 @@
 name: Create Release with 7z Archive
 
 on:
+  push:
+    branches:
+      - master_1.5
+  pull_request:
+    branches:
+      - master_1.5
   workflow_dispatch:
     inputs:
       version_tag:
@@ -20,21 +26,125 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
-      - name: Read version
+      - name: Bump version and generate changelog
         id: version
         run: |
-          VERSION=$(cat version)
-          if [ -n "${{ github.event.inputs.version_tag }}" ]; then
-          VERSION="${VERSION}-${{ github.event.inputs.version_tag }}"
+          CURRENT=$(cat version)
+          IFS='.' read -r MAJOR MINOR PATCH <<< "$CURRENT"
+
+          LAST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "")
+          if [ -z "$LAST_TAG" ]; then
+            COMMITS=$(git log --pretty=format:"%s")
+          else
+            COMMITS=$(git log "${LAST_TAG}..HEAD" --pretty=format:"%s")
           fi
-          echo "VERSION=${VERSION}" >> $GITHUB_OUTPUT
+
+          BUMP="none"
+          while IFS= read -r msg; do
+            if echo "$msg" | grep -qE "^[a-z]+(\(.+\))?!:|BREAKING CHANGE"; then
+              BUMP="major"
+              break
+            elif echo "$msg" | grep -qE "^feat(\(.+\))?:"; then
+              [ "$BUMP" != "major" ] && BUMP="minor"
+            elif echo "$msg" | grep -qE "^(fix|perf|refactor)(\(.+\))?:"; then
+              [ "$BUMP" = "none" ] && BUMP="patch"
+            fi
+          done <<< "$COMMITS"
+
+          if [ "$BUMP" = "none" ]; then
+            echo "No releasable commits since last tag. Skipping."
+            exit 0
+          fi
+
+          if [ "$BUMP" = "major" ]; then
+            MAJOR=$((MAJOR + 1)); MINOR=0; PATCH=0
+          elif [ "$BUMP" = "minor" ]; then
+            MINOR=$((MINOR + 1)); PATCH=0
+          else
+            PATCH=$((PATCH + 1))
+          fi
+
+          NEW_VERSION="${MAJOR}.${MINOR}.${PATCH}"
+          if [ -n "${{ github.event.inputs.version_tag }}" ]; then
+            NEW_VERSION="${NEW_VERSION}-${{ github.event.inputs.version_tag }}"
+          fi
+          echo "$NEW_VERSION" > version
+          echo "VERSION=${NEW_VERSION}" >> $GITHUB_OUTPUT
+          echo "Bumped: $CURRENT → $NEW_VERSION ($BUMP)"
+
+          # Generate changelog grouped by conventional commit type
+          BREAKING="" FEATURES="" FIXES="" PERF="" REFACTOR="" OTHER=""
+          while IFS= read -r msg; do
+            DESC=$(echo "$msg" | sed -E 's/^[a-z]+(\([^)]+\))?!?: //')
+            if echo "$msg" | grep -qE "^[a-z]+(\(.+\))?!:|BREAKING CHANGE"; then
+              BREAKING="${BREAKING}- ${DESC}\n"
+            elif echo "$msg" | grep -qE "^feat(\(.+\))?:"; then
+              FEATURES="${FEATURES}- ${DESC}\n"
+            elif echo "$msg" | grep -qE "^fix(\(.+\))?:"; then
+              FIXES="${FIXES}- ${DESC}\n"
+            elif echo "$msg" | grep -qE "^perf(\(.+\))?:"; then
+              PERF="${PERF}- ${DESC}\n"
+            elif echo "$msg" | grep -qE "^refactor(\(.+\))?:"; then
+              REFACTOR="${REFACTOR}- ${DESC}\n"
+            elif echo "$msg" | grep -qE "^(chore|ci|build|docs|style|test)(\(.+\))?:"; then
+              : # skip maintenance commits
+            else
+              OTHER="${OTHER}- ${msg}\n"
+            fi
+          done <<< "$COMMITS"
+
+          {
+            DESCRIPTION="${{ github.event.inputs.description }}"
+            if [ -n "$DESCRIPTION" ] && [ "$DESCRIPTION" != "Automatic release" ]; then
+              echo "$DESCRIPTION"
+              echo ""
+            fi
+            echo "## What's Changed"
+            if [ -n "$BREAKING" ]; then
+              echo ""; echo "### Breaking Changes"
+              printf "%b" "$BREAKING" | grep -v '^$'
+            fi
+            if [ -n "$FEATURES" ]; then
+              echo ""; echo "### New Features"
+              printf "%b" "$FEATURES" | grep -v '^$'
+            fi
+            if [ -n "$FIXES" ]; then
+              echo ""; echo "### Bug Fixes"
+              printf "%b" "$FIXES" | grep -v '^$'
+            fi
+            if [ -n "$PERF" ]; then
+              echo ""; echo "### Performance"
+              printf "%b" "$PERF" | grep -v '^$'
+            fi
+            if [ -n "$REFACTOR" ]; then
+              echo ""; echo "### Refactoring"
+              printf "%b" "$REFACTOR" | grep -v '^$'
+            fi
+            if [ -n "$OTHER" ]; then
+              echo ""; echo "### Other Changes"
+              printf "%b" "$OTHER" | grep -v '^$'
+            fi
+          } > changelog.md
+
+      - name: Commit version bump and push tag
+        if: github.event_name != 'pull_request'
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add version
+          git commit -m "chore: bump version to ${{ steps.version.outputs.VERSION }} [skip ci]"
+          git tag ${{ steps.version.outputs.VERSION }}
+          git push
+          git push origin ${{ steps.version.outputs.VERSION }}
 
       - name: Prepare build structure
         run: |
           mkdir -p build_temp
           cp -r fomod build_temp/
-          cp -r optional build_temp/
+          cp -r optionals build_temp/
           cp -r patches build_temp/
           cp -r src build_temp/
           cp Installation_Instructions+Changelog.txt build_temp/
@@ -51,12 +161,12 @@ jobs:
         run: rm -rf fomod
 
       - name: Create GitHub Release
+        if: github.event_name != 'pull_request'
         uses: softprops/action-gh-release@v1
         with:
           tag_name: ${{ steps.version.outputs.VERSION }}
-          name: Release ${{ steps.version.outputs.VERSION }}
-          body: |
-            ${{ github.event.inputs.description }}
+          name: ${{ steps.version.outputs.VERSION }}
+          body_path: changelog.md
           files: warfare-alife-overhaul-${{ steps.version.outputs.VERSION }}.7z
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
